8.10.1/UPDATE/ITEM_1/IDE/logical/columns.md
## <div id="layout">欄位清單</div>

* 版面
  * ![ini]

## <div id="form-action">動作說明</div>

* 說明內容
  * [版面資訊通則](../RulesOther/README.md#ruleother1)
  * [單據異動資料按鍵操作通則](../RulesButton/README#rulebutton2)
  * 單據編輯狀態請參照[檢視表][index]
  * 欄位進入編輯模式僅`(31)資料內容區塊`致能, 其餘除能(含檢視表主頁)
## <div id="object-desc">欄位說明</div>
* <p id="fieldbreak3" style="color:blue;font-weight:bold">欄位清單(非UNION)</p>    
    
    ![fieldbreak_m5]  

    * <t>(1)輸出欄位清單</t>
      * 用途說明
      * 規格說明:
        * 預設致能
        * 執行控制
          * 欄位編輯模式下除能
        * 列出該檢視表所有輸出欄位清單
        * 若對應欄位為個資加密 或 密碼處理, 則依據[加密規則][link_other5]顯示顯示。
        * 切換資料時重新載入`(32)輸出欄位資料區塊`
        * 排序方式: `(13)欄位名` 
        * 顯示方式: [特定處理對應圖示] + `(13)欄位名`
        | 特定處理 | 對應圖示 |
        | --- | --- |
        | 無 | -- |
        | 計數(COUNT) | ![icon_other] |
        | 總和(SUM) | ![icon_other] |
        | 最大值(MAX) | ![icon_other] |
        | 最小值(MIN) | ![icon_other] |
        | 平均值(AVG) | ![icon_other] |
        | 群組彙總(GROUP BY) | ![icon_group] |
        | 特殊語法 | -- |
        * <ps>注意</ps> 圖示先暫由網路截圖, 待申請
    * <t>(2)可參考欄位清單</t>
      * 用途說明: 顯示所有[結構展開 `參考來源表格`][joinlist]的欄位清單
      * 規格說明:
        * 預設致能
        * 執行控制
          * 欄位編輯模式下除能
        * 若可參考欄位為個資加密或密碼處理欄位, 則依據[加密規則][link_other5]顯示顯示。
        * 切換資料時, 依據駐留欄位重新載入`(32)輸出欄位資料區塊`
          * `(12)料號`: 空白
          * `(13)欄位名`: 依據對應資料
          * `(14)英文名稱`:
            * 檢視表欄位: 對應英文名稱
            * 資料表欄位: 欄位名(DB)
          * `(15)資料型態`: 依據對應資料
          * `(16)可變長度`: 依據對應資料
          * `(17)Unicode`: 依據對應資料
          * `(18)長度`: 依據對應資料
          * `(19)小數位數`: 依據對應資料
          * `(20)IsNull`: 不勾選
          * `(21)個資解密`: 不勾選
          * `(31)資料內容區塊`: `(22)資料內容_來源參照`選取
          * `(23)來源參照_表格`: 依據對應資料表格
          * `(24)來源參照_欄位`: 依據對應資料欄位
    * <t>(3)可參考欄位_複製</t>
      * 用途說明
      * 規格說明:[頁面鎖定通則][link_other4]
        * 預設致能
        * 執行限制
          * 欄位編輯模式下除能
          * 可批次複製
        * 檢查檢視表是否被鎖定
          * 被鎖定(本次操作):
              * 複製建立新料號
                * `(12)料號`: 新料號
                * `(13)欄位名`: 依據對應資料
                * `(14)英文名稱`:
                  * 檢視表欄位: 對應英文名稱
                  * 資料表欄位: 欄位名(DB)
                * `(15)資料型態`: 依據對應資料
                * `(16)可變長度`: 依據對應資料
                * `(17)Unicode`: 依據對應資料
                * `(18)長度`: 依據對應資料
                * `(19)小數位數`: 依據對應資料
                * `(20)IsNull`: 不勾選
                * `(21)個資解密`: 不勾選
                * `(31)資料內容區塊`: `(22)資料內容_來源參照`選取
                * `(23)來源參照_表格`: 依據對應資料表格
                * `(24)來源參照_欄位`: 依據對應資料欄位
              * 複製當有相同`(13)欄位名`或`(14)英文名稱`時
                * 依據[動作通則][link_other3]顯示訊息:以下欄位複製失敗<欄位名或英文名稱已存在> [欄位清單...]
            * 無鎖定、被鎖定(非本次操作):
              * 彈出錯誤訊息:該單據已被解除鎖定，無法執行。
      * 作業流程
    * <t>(4)可參考欄位_重整</t>
      * 用途說明
      * 規格說明:
        * 預設致能
        * 執行限制
          * 欄位編輯模式下除能
        * 重新取得可參考欄位清單, 並載入`(2)可參考欄位清單`
      * 作業流程
    * <t>(5)新增輸出欄位</t>
      * 用途說明
      * 規格說明
        * 預設致能
        * 執行限制:
          * 欄位編修模式下除能
      * 作業流程
    * <t>(6)刪除輸出欄位</t>
      * 用途說明
      * 規格說明:[頁面鎖定通則][link_other4]
        * 預設除能
        * 執行限制:
          * 駐留於`(1)輸出欄位清單`致能
          * 欄位瀏覽模式下致能
        * 檢查檢視表是否被鎖定
          * 被鎖定(本次操作):
              * 刪除欄位
            * 無鎖定、被鎖定(非本次操作):
              * 彈出錯誤訊息:該單據已被解除鎖定，無法執行。
      * 作業流程
    * <t>(7)編輯輸出欄位</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制:
          * 駐留於`(1)輸出欄位清單`致能
          * 欄位瀏覽模式下致能
      * 作業流程
    * <t>(8)儲存輸出欄位</t>
      * 用途說明
      * 規格說明:[頁面鎖定通則][link_other4]
        * 預設除能
        * 執行限制:
          * 欄位編修模式下致能
        * 檢查檢視表是否被鎖定
          * 被鎖定(本次操作):
              * 執行[儲存檢控](#save-action)
              * 將本次資料儲存
              * 關閉單據
            * 無鎖定、被鎖定(非本次操作):
              * 彈出錯誤訊息:該單據已被解除鎖定，無法執行。
      * 作業流程
    * <t>(9)取消</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制:
          * 欄位編修模式下致能
        * 欄位進入瀏覽模式
      * 作業流程
    * <t>(10)描述</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制:
          * 欄位瀏覽模式下致能
        * 開啟[規格備註][O3]
        * 開啟後預設載入類型為檢視表欄位、欄位名稱、欄位料號
      * 作業流程
    * <t>(11)同步參考欄位</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制:
          * 欄位瀏覽模式下致能
        * 開啟 [同步邏表欄位][O6], 載入表格類別為檢視表、檢視表名稱、欄位名稱、資料型態
      * 作業流程
    * <t id="field32">(32)輸出欄位資料區塊</t>
      * 用途說明
      * 規格說明
    * <t>(12)料號</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 顯示欄位名稱, 不可輸入內容
      * 作業流程
    * <t>(13)欄位名</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
          * 長度最多80字元
        * 自行輸入
      * 作業流程
    * <t>(14)英文名稱</t>
      * 用途說明
      * 規格說明:
        * 自行輸入
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
          * 只可輸入英數字
          * 長度最多50字元
          * 跳離後自動轉換為大寫英文
          * 欄位不可涵蓋特殊字元
          | 特殊字元 ||||||||
          | ---| --- |---| ---| --- |---| ---| --- |
          | 1| ` || 11| - || 21| " |
          | 2| ~ || 12| = || 22| ' |
          | 3| ! || 13| + || 23| [ |
          | 4| @ || 14| \| || 24| ] |
          | 5| # || 15| / || 25| { |
          | 6| $ || 16| ? || 26| } |
          | 7| % || 17| > || 27| ^ |
          | 8| & || 18| < || 28| ; |
          | 9| \ || 19| . || 29| : |
          | 10| * || 20| , || |  |
      * 作業流程
    * <t>(15)資料型態</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
        * 下拉選項: 位元/ 文字/ 整數 (bigint)/ 整數 (int)/ 整數 (smallint)/ 整數 (tinyint)/ 數字/ 日期/ 日期時間/ 備註/ 二進位/ 全唯碼
        * 當挑選選項如下列, 跳離後改變其他元件狀態
          * 選項為數字，顯示`(19)小數位數`，否則 隱藏
          * 選項為字串
            * 顯示`(16)可變長度`、`(17)Unicode`，否則 隱藏
            * `(17)Unicode` 預設勾選
          * 選項為備註
            * 顯示`(17)Unicode`，否則 隱藏
            * `(17)Unicode` 預設勾選
        * 切換資料型態, 改變`(18)長度`可設定狀態與內容值
        | 型態 | 控制 | 預設值值 |
        | ---- | --- | --- |
        |位元 | 除能 | 1 |
        |文字 | 致能 | 10 |
        |整數(bigint) | 致能 | 10 |
        |整數(int) | 致能 | 9 |
        |整數(smallint) | 致能 | 4 |
        |整數(tinyint) | 致能 | 2 |
        |數字 | 致能 | 不異動 |
        |日期 | 除能 | 8 |
        |日期時間 | 除能 | 19 |
        |備註 | 除能 | 10 |
        |二進位 | 除能 | 10 |
        |全唯碼 | 除能 | 38 |
        * 切換資料型態, 改變`(20)IsNull`可設定狀態
        | 型態 | 控制 | 資料 |
        | ---- | --- | --- |
        |位元 | 致能 | 不異動 |
        |文字 | 致能 | 不異動 |
        |整數 | 致能 | 不異動 |
        |數字 | 致能 | 不異動 |
        |日期 | 致能 | 不異動 |
        |日期時間 | 致能 | 不異動 |
        |備註 | 致能 | 不異動 |
        |二進位 | 致能 | 不異動 |
        |全唯碼 | 除能 | 清空 |
      * 作業流程
    * <t>(16)可變長度</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
      * 作業流程
    * <t>(17)Unicode</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
      * 作業流程
    * <t>(18)長度</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
          * 僅可輸入數字
          * 最長4位數
      * 作業流程
    * <t>(19)小數位數</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
          * 僅可輸入數字
          * 最長2位數
      * 作業流程
    * <t>(20)IsNull</t>
      * 用途說明: 快速建立IsNull函數
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
      * 作業流程
    * <t>(21)個資解密</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
          * 若 `(24)來源參照_欄位` 為個資加密，則預設勾選並致能
          * 若 `(24)來源參照_欄位` 非個資加密，則取消勾選並除能
      * 作業流程
    * <t id="field31">(31)資料內容區塊</t>
      * 用途說明
      * 規格說明
        * 當檢視表設定為非UNION時, 顯示`(31)資料內容區塊`
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
      * 作業流程
    * <t>(22)資料內容_來源參照</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
        * 選取後`(23)來源參照_表格`、`(24)來源參照_欄位`致能; `(26)運算公式_運算式`、`(27)資料內容_自訂欄位`清空並除能
      * 作業流程
    * <t>(23)來源參照_表格</t>
      * 用途說明
      * 規格說明:
        * 下拉選項[結構展開`參考來源表格`][joinlist]清單
        * 切換後清除並重新載入`(24)來源參照_欄位`
      * 作業流程
    * <t>(24)來源參照_欄位</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
        * 下拉選項[結構展開`參考來源表格`][joinlist]的欄位清單
      * 作業流程
    * <t id="field33">(33)個資加密</t>
      * 用途說明: 用來顯示`(24)來源參照_欄位`是否為個資加密欄位
      * 規格說明:
        * 預設除能
        * 執行限制
          * 當`(23)來源參照_表格` 為資料表 且有設定個資加密, 則除能顯示並勾選
          * 當`(23)來源參照_表格` 為資料表 且未設定個資加密, 則隱藏並取消勾選
          * 當`(23)來源參照_表格` 為檢視表 且為個資加密單元, 則除能顯示並勾選
          * 當`(23)來源參照_表格` 為檢視表 且不為個資加密單元, 則隱藏並取消勾選
    * <t id="field33">(34)密碼處理</t>
      * 用途說明: 用來顯示`(24)來源參照_欄位`是否為密碼處理欄位
      * 規格說明:
        * 預設除能
        * 執行限制
          * 當`(23)來源參照_表格` 為資料表 且有設定密碼處理, 則除能顯示並勾選
          * 當`(23)來源參照_表格` 為資料表 且未設定密碼處理, 則隱藏並取消勾選
          * 當`(23)來源參照_表格` 為檢視表 且為密碼處理單元, 則除能顯示並勾選
          * 當`(23)來源參照_表格` 為檢視表 且不為密碼處理單元, 則隱藏並取消勾選
    * <t>(25)資料內容_運算公式</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
        * 選取後`(26)運算公式_運算式`致能; `(23)來源參照_表格`、`(24)來源參照_欄位`、`(27)資料內容_自訂欄位`清空並除能
      * 作業流程
    * <t>(26)運算公式_運算式</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制
          * 有設定內容時致能
        * 當欄位為瀏覽狀態, 開啟[運算式][link_expression], 限定:無查表功能, 無編輯功能
        * 當欄位為編輯狀態, 開啟[運算式][link_expression], 限定:無查表功能
      * 作業流程
    * <t>(27)資料內容_自訂欄位</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
        * 選取後`(27)資料內容_自訂欄位`致能; `(23)來源參照_表格`、`(24)來源參照_欄位`、`(26)運算公式_運算式`清空並除能
      * 作業流程
    * <t>(28)預設空值</t>
      * 用途說明
      * 規格說明
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
        * 依據`(15)資料型態`給予`(27)資料內容_自訂欄位`不同內容
        | `(15)資料型態` | 給值|
        | --- | --- |
        |位元 |0 |
        |文字 |SPACE(依據`(18)長度`)|
        |整數(各種整數) |0 |
        |數字 |0 |
        |日期 |NULL |
        |日期時間 |NULL |
        |備註 |NULL |
        |二進位 |NULL |
        |全唯碼 |NULL |
      * 作業流程
    * <t>(29)自訂欄位_內容</t>
      * 用途說明
      * 規格說明
        * 自行輸入
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
      * 作業流程
    * <t>(30)特定處理</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制
          * 欄位進入編輯模式致能
        * 下拉選項: 無/ 計數 (COUNT)/ 總合 (SUM)/ 最大值 (MAX)/ 最小值 (MIN)/ 平均值(AVG)/ 群組彙總(GROUP BY)/ 特殊語法
      * 作業流程

* <p id="fieldbreak3" style="color:blue;font-weight:bold">欄位清單(UNION)</p>
    
    ![fieldbreak_m5-1]  

    * <t>(1)UNION資料內容區塊</t>
      * 用途說明
      * 規格說明:
        * 當檢視表設定為UNION時, 顯示UNION資料內容區塊
        * 依據[結構展開`參考來源表格`][joinlist]項目載入`(2)別名`
      * 作業流程
    * <t>(2)別名</t>
      * 用途說明
      * 規格說明:
        * 預設除能
      * 作業流程
    * <t>(3)資料內容</t>
      * 用途說明
      * 規格說明:
        * 預設除能
        * 執行限制
          * 有設定內容時致能
        * 當欄位為瀏覽狀態, 開啟[運算式][link_expression], 限定:無查表功能, 無編輯功能
        * 當欄位為編輯狀態, 開啟[運算式][link_expression], 限定:無查表功能
      * 作業流程
      
## <div id="save-action">儲存檢控</div>
* 以下欄位不允空白檢控 [動作通則][link_other2]
  * `(13)欄位名`、`(14)英文名稱`、`(15)資料型態`、`(18)長度`
* 其他檢控 [動作通則][link_other3]
  * `(22)資料內容_來源參照`、`(25)資料內容_運算公式`、`(27)資料內容_自訂欄位`至少設定一筆
  * 當選擇`(22)資料內容_來源參照`時, `(23)來源參照_表格`、`(24)來源參照_欄位`必須設定
  * 當選擇`(25)資料內容_運算公式`時, `(26)運算公式_運算式`必須設定
  * 當選擇`(27)資料內容_自訂欄位`時, `(29)自訂欄位_內容`必須設定
  * `(14)英文名稱`不可包含特殊字元 
  * `(14)英文名稱`只輸入英文+數字, 存回跳檢控訊息"英文名稱不合法"
  * `(14)英文名稱`首字必須為英文字
  * 當 `(24)來源參照_欄位` 為個資加密, 則`(15)資料型態`不能等於備註、二進位或`(18)長度` > 100
  * 當 `(24)來源參照_欄位` 為密碼處理, 則`(15)資料型態`只能為文字
  * 依據`(15)資料型態`檢查`(18)長度`範圍
  | 型態 | 控制 | 可設定長度範圍 |
  | ---- | --- | --- |    
  |整數(bigint) | 致能 | 10~16 |
  |整數(int) | 致能 | 5~9 |
  |整數(smallint) | 致能 | 3~4 |
  |整數(tinyint) | 致能 | 1~2 |
  |數字 | 致能 | 1~16 |  
  * `(18)長度`必須大於`(19)小數位`
  * 若為UNION檢視表, `(1)UNION資料內容區塊`必須全部設定
<!-- 圖示_介面 -->
[ini]:attachment/ini_logcols.png "[介面]欄位清單"
[ini-1]:attachment/ini_logcols_union.png "[介面]欄位清單(UNION)"
[fieldbreak_m5]:attachment/mark_ini_logcols.png "[欄位說明]欄位清單"
[fieldbreak_m5-1]:attachment/mark_ini_logcols_union.png "[欄位說明]欄位清單(UNION)"
[icon_group]:attachment/colsspecific_icon_group.png "Group by icon"
[icon_other]:attachment/colsspecific_icon_other.png "彙總函式 by icon"

<!-- 超連結 -->
[link_other1]:{4}/IDE/Specification/RulesOther/README?id=ruleother9 "共用通則_其他操作/打樣通則"
[link_other2]:{4}/IDE/Specification/RulesOther/README?id=ruleother7 "共用通則_其他操作/儲存檢控_不允空白"
[link_other3]:{4}/IDE/Specification/RulesOther/README?id=ruleother8 "共用通則_其他操作/儲存檢控_其他"
[link_other4]:{4}/IDE/Specification/RulesOther/README?id=ruleother10 "共用通則_其他操作/鎖定通則"
[link_other5]:{4}/IDE/Specification/RulesOther/README?id=ruleother11 "共用通則_其他操作/個資加密通則"

[index]:./README "檢視表主頁"
[joinlist]:./joinlist?id=field3 "參考來源表格"
[O6]:../README "同步可參考欄位"
[O3]:../README "規格備註"
[link_expression]:/8.10.0/IDE/Specification/運算式 "共用通則_開啟運算式"